<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PreferenciasActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selección de letras jugables" />

    <RadioGroup
        android:id="@+id/grupoRBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbTodas">

        <RadioButton
            android:id="@+id/rbTodas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ocultarListaLetras"
            android:text="@string/todasLetras" />

        <RadioButton
            android:id="@+id/rbScattergories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ocultarListaLetras"
            android:text="@string/ScattergoriesOficial" />

        <RadioButton
            android:id="@+id/rbPerso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mostrarListaLetras"
            android:text="@string/personalizarLetras" />
    </RadioGroup>

    <EditText
        android:id="@+id/listaLetras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/persoPista"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/Aplicar"
            android:onClick="guardarPreferencias"/>
    </LinearLayout>

</LinearLayout>